--- a/manifest.json
+++ b/manifest.json
@@ -25,7 +25,7 @@
   "content_scripts": [
     {
       "matches": [
-        "https://github.com/*"
+        "*://*.github.com/*"
       ],
       "js": [
         "main.js"
